--- a/ktx_mvs2019.vcxproj
+++ b/ktx_mvs2019.vcxproj
@@ -368,6 +368,7 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\antilag.c" />
     <ClCompile Include="src\admin.c" />
     <ClCompile Include="src\arena.c" />
     <ClCompile Include="src\bot_aim.c" />
