--- a/src/Makefile.dl.in
+++ b/src/Makefile.dl.in
@@ -40,7 +40,7 @@ endif
 
 LIBS=@LIBS@
 
-SOURCES=native_lib.c buttons.c client.c combat.c doors.c g_cmd.c g_main.c \
+SOURCES=native_lib.c buttons.c antilag.c client.c combat.c doors.c g_cmd.c g_main.c \
 	g_mem.c g_spawn.c g_syscalls.c g_utils.c items.c mathlib.c misc.c \
 	plats.c player.c q_shared.c server.c spectate.c subs.c triggers.c \
 	weapons.c world.c clan_arena.c \
