--- a/src/Makefile.vm.in
+++ b/src/Makefile.vm.in
@@ -33,7 +33,7 @@ ifdef BOT_SUPPORT
 	BOTFLAGS=-DBOT_SUPPORT
 endif
 
-SOURCES=g_main.c bg_lib.c buttons.c client.c combat.c doors.c g_cmd.c \
+SOURCES=g_main.c bg_lib.c buttons.c antilag.c client.c combat.c doors.c g_cmd.c \
 	g_mem.c g_spawn.c g_utils.c items.c mathlib.c misc.c plats.c player.c \
 	q_shared.c server.c spectate.c subs.c triggers.c weapons.c world.c clan_arena.c \
 	admin.c captain.c coach.c commands.c globals.c logs.c maps.c match.c motd.c vip.c vote.c \
