--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,8 +91,27 @@ jobs:
             qwprogs.*
           compression-level: 9
 
+  build-macos:
+    runs-on: macos-latest
+    timeout-minutes: 10
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Build
+        run: |
+          ./build_cmake.sh macos
+          mv build/macos/qwprogs.dylib .
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: qwprogs-macos-universal
+          path: |
+            qwprogs.dylib
+          compression-level: 9
+
   upload:
-    needs: build
+    needs: [build, build-macos]
     timeout-minutes: 10
     runs-on: ubuntu-latest
     if: github.repository == 'QW-Group/ktx' && ((github.event_name == 'push' && github.ref == 'refs/heads/master') || github.event_name == 'release')
