--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,8 @@ jobs:
         run: |
           cmake -B builddir -G "Visual Studio 17 2022"
           cmake --build builddir
-          dir /S /B builddir
+          Get-ChildItem -Path .\builddir -Recurse | Select-Object FullName
+
 
   build:
     runs-on: ubuntu-latest
