--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,6 +121,9 @@ jobs:
         run: |
           cmake -B builddir -S . -G "Visual Studio 17 2022"
           cmake --build builddir --config Release --parallel
+          echo "repo: ${{ github.repository }}"
+          echo "event name: ${{ github.event_name }}"
+          echo "ref: ${{ github.ref }}"
 
   upload:
     needs: build
