--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,11 @@
 name: main
 
-on: [ push, pull_request, workflow_dispatch ]
+on:
+ - push
+ - pull_request
+ - workflow_dispatch
+ - release:
+    types: [created]
 
 jobs:
   build:
