--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: main
 
 on:
- - push
- - pull_request
- - workflow_dispatch
- - release:
+ push:
+ pull_request:
+ workflow_dispatch:
+ release:
     types: [created]
 
 jobs:
