--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: main
 
 on:
  push:
+  tags: # Ignore tags as the release type takes care of those
  pull_request:
  workflow_dispatch:
  release:
